--- a/admin.html
+++ b/admin.html
@@ -3,12 +3,281 @@
 <head>
   <title>IFWL Admin Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    :root{
+      --bg:#0b1220;
+      --panel:rgba(255,255,255,0.92);
+      --panelBorder:rgba(255,255,255,0.25);
+      --text:#111827;
+      --muted:#6b7280;
+      --dark:#111827;
+      --ok:#047857;
+      --bad:#b91c1c;
+    }
+
+    body{
+      margin:0;
+      font-family: Arial, sans-serif;
+      min-height:100vh;
+      color:var(--text);
+      background:
+        linear-gradient(rgba(2,6,23,0.70), rgba(2,6,23,0.70)),
+        url("./ifwl_bg.webp");
+      background-size:cover;
+      background-position:center;
+      background-attachment:fixed;
+    }
+
+    .wrap{
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:18px;
+      box-sizing:border-box;
+    }
+
+    .card{
+      width:100%;
+      max-width:720px;
+      background:var(--panel);
+      border:1px solid var(--panelBorder);
+      border-radius:16px;
+      box-shadow:0 16px 50px rgba(0,0,0,0.35);
+      overflow:hidden;
+    }
+
+    .head{
+      display:flex;
+      gap:14px;
+      align-items:center;
+      padding:16px 16px 12px;
+      border-bottom:1px solid rgba(17,24,39,0.10);
+    }
+
+    .logo{
+      width:44px;
+      height:44px;
+      object-fit:contain;
+      flex:0 0 auto;
+      filter: drop-shadow(0 1px 1px rgba(0,0,0,0.25));
+    }
+
+    h1{
+      margin:0;
+      font-size:18px;
+      font-weight:900;
+      letter-spacing:0.2px;
+      color:#0b1220;
+    }
+
+    .sub{
+      margin-top:4px;
+      font-size:12px;
+      color:var(--muted);
+      line-height:1.25;
+    }
+
+    .body{
+      padding:14px 16px 16px;
+    }
+
+    .warning{
+      border:1px solid #fca5a5;
+      background:#fef2f2;
+      color:#991b1b;
+      border-radius:14px;
+      padding:12px 12px;
+      font-size:13px;
+      line-height:1.3;
+      font-weight:800;
+    }
+
+    .warning small{
+      display:block;
+      margin-top:6px;
+      font-weight:700;
+      opacity:0.95;
+    }
+
+    .actions{
+      display:flex;
+      gap:10px;
+      align-items:center;
+      margin-top:14px;
+      flex-wrap:wrap;
+    }
+
+    button{
+      padding:12px 14px;
+      border:1px solid rgba(17,24,39,0.18);
+      border-radius:14px;
+      background:#fff;
+      cursor:pointer;
+      font-size:16px;
+    }
+    button.primary{
+      background:var(--dark);
+      border-color:var(--dark);
+      color:#fff;
+      font-weight:800;
+    }
+    button:disabled{
+      opacity:0.6;
+      cursor:not-allowed;
+    }
+
+    .statusBox{
+      margin-top:14px;
+      border:1px solid rgba(17,24,39,0.10);
+      background:rgba(255,255,255,0.65);
+      border-radius:14px;
+      padding:12px;
+    }
+
+    .statusTitle{
+      font-size:13px;
+      font-weight:900;
+      margin:0 0 10px;
+      color:#0b1220;
+    }
+
+    .statusList{
+      display:flex;
+      flex-direction:column;
+      gap:8px;
+      margin:0;
+      padding:0;
+      list-style:none;
+    }
+
+    .statusItem{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
+      border:1px solid rgba(17,24,39,0.08);
+      background:#fff;
+      border-radius:12px;
+      padding:10px 12px;
+      font-size:13px;
+    }
+
+    .leftLabel{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      min-width:0;
+    }
+
+    .dot{
+      width:10px;
+      height:10px;
+      border-radius:999px;
+      background:#d1d5db;
+      flex:0 0 auto;
+    }
+
+    .label{
+      font-weight:800;
+      color:#111827;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+
+    .rightState{
+      display:flex;
+      align-items:center;
+      gap:8px;
+      font-weight:900;
+      white-space:nowrap;
+    }
+
+    .okText{ color:var(--ok); }
+    .badText{ color:var(--bad); }
+
+    .note{
+      margin-top:10px;
+      font-size:12px;
+      color:var(--muted);
+      line-height:1.25;
+      word-break:break-word;
+    }
+
+    /* Mobile friendliness */
+    @media (max-width: 620px){
+      body{ background-attachment:scroll; }
+      .head{ align-items:flex-start; }
+      .logo{ width:40px; height:40px; }
+      h1{ font-size:17px; }
+      .actions button{ width:100%; }
+      .statusItem{ flex-direction:column; align-items:flex-start; }
+      .rightState{ width:100%; justify-content:space-between; }
+    }
+  </style>
 </head>
 
 <body>
-  <h2>IFWL Admin Login</h2>
-  <button id="loginBtn" type="button">Sign in with Google</button>
-  <p id="status">Loading…</p>
+  <div class="wrap">
+    <div class="card" role="main" aria-label="IFWL Admin Login">
+      <div class="head">
+        <img class="logo" src="./ifwl_logo.png" alt="IFWL logo">
+        <div style="min-width:0;">
+          <h1>IFWL Admin Login</h1>
+          <div class="sub">
+            Staff-only access for IFWL administration and stewarding tools.
+          </div>
+        </div>
+      </div>
+
+      <div class="body">
+        <div class="warning" aria-label="Security warning">
+          IFWL STAFF ONLY — UNAUTHORISED ACCESS IS PROHIBITED.
+          <small>
+            Any unauthorised access attempts will be logged. Any attempt to sign in by non-IFWL staff may result in permanent bans from the league.
+          </small>
+        </div>
+
+        <div class="actions">
+          <button id="loginBtn" type="button" class="primary">Sign in with Google</button>
+        </div>
+
+        <div class="statusBox" aria-label="System status">
+          <div class="statusTitle">System Status</div>
+          <ul class="statusList">
+            <li class="statusItem">
+              <div class="leftLabel">
+                <span class="dot" id="dotApp"></span>
+                <span class="label">Firebase App</span>
+              </div>
+              <div class="rightState" id="stateApp">Checking…</div>
+            </li>
+
+            <li class="statusItem">
+              <div class="leftLabel">
+                <span class="dot" id="dotAuth"></span>
+                <span class="label">Auth</span>
+              </div>
+              <div class="rightState" id="stateAuth">Checking…</div>
+            </li>
+
+            <li class="statusItem">
+              <div class="leftLabel">
+                <span class="dot" id="dotDb"></span>
+                <span class="label">IFWL Database</span>
+              </div>
+              <div class="rightState" id="stateDb">Checking…</div>
+            </li>
+          </ul>
+
+          <div class="note" id="status">
+            Loading…
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Firebase compat SDK -->
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
@@ -22,8 +291,27 @@
     const statusEl = document.getElementById("status");
     const loginBtn = document.getElementById("loginBtn");
 
+    const dotApp = document.getElementById("dotApp");
+    const dotAuth = document.getElementById("dotAuth");
+    const dotDb = document.getElementById("dotDb");
+
+    const stateApp = document.getElementById("stateApp");
+    const stateAuth = document.getElementById("stateAuth");
+    const stateDb = document.getElementById("stateDb");
+
+    function setState(dotEl, stateEl, ok, label) {
+      if (ok) {
+        dotEl.style.background = "#10b981";
+        stateEl.innerHTML = `<span class="okText">✅ OK</span>`;
+      } else {
+        dotEl.style.background = "#ef4444";
+        stateEl.innerHTML = `<span class="badText">❌ ${label || "Error"}</span>`;
+      }
+    }
+
     window.addEventListener("error", (e) => {
       statusEl.innerText = "JS error: " + e.message;
+      // Don't force status lights to red here; could be unrelated UI error.
     });
 
     window.addEventListener("unhandledrejection", (e) => {
@@ -31,20 +319,30 @@
     });
 
     // sanity checks (after scripts load)
-    try {
-      const appsCount = (firebase.apps && firebase.apps.length) ? firebase.apps.length : 0;
+    (function initChecks(){
+      try {
+        const appsCount = (firebase.apps && firebase.apps.length) ? firebase.apps.length : 0;
 
-      statusEl.innerText =
-        "firebase: " + (typeof firebase) +
-        " | apps: " + appsCount +
-        " | auth: " + (firebase?.auth ? "ok" : "missing") +
-        " | firestore: " + (firebase?.firestore ? "ok" : "missing");
+        const appOk = appsCount > 0;
+        const authOk = !!firebase?.auth;
+        const dbOk = !!firebase?.firestore;
 
-      if (appsCount === 0) statusEl.innerText += " ❌";
-      else statusEl.innerText += " ✅";
-    } catch (e) {
-      statusEl.innerText = "Init check failed: " + e.message;
-    }
+        setState(dotApp, stateApp, appOk, "Missing");
+        setState(dotAuth, stateAuth, authOk, "Missing");
+        setState(dotDb, stateDb, dbOk, "Missing");
+
+        statusEl.innerText =
+          "firebase: " + (typeof firebase) +
+          " | apps: " + appsCount +
+          " | auth: " + (authOk ? "ok" : "missing") +
+          " | firestore: " + (dbOk ? "ok" : "missing");
+      } catch (e) {
+        statusEl.innerText = "Init check failed: " + e.message;
+        setState(dotApp, stateApp, false, "Init failed");
+        setState(dotAuth, stateAuth, false, "Init failed");
+        setState(dotDb, stateDb, false, "Init failed");
+      }
+    })();
 
     loginBtn.addEventListener("click", async () => {
       loginBtn.disabled = true;
@@ -59,7 +357,7 @@
 
         const snap = await firebase.firestore().collection("admins").doc(email).get();
         if (!snap.exists) {
-          statusEl.innerText = "Access denied.";
+          statusEl.innerText = "Access denied. This attempt may be logged.";
           await firebase.auth().signOut();
           loginBtn.disabled = false;
           return;
