--- a/headsteward.html
+++ b/headsteward.html
@@ -4,12 +4,49 @@
   <title>IFWL Head Steward Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family: Arial, sans-serif; margin:0; background:#f3f4f6; }
-    header { padding:14px 18px; background:#111827; color:#fff; display:flex; justify-content:space-between; align-items:flex-start; gap:12px; }
+    body {
+      font-family: Arial, sans-serif;
+      margin:0;
+      background:
+        linear-gradient(rgba(2,6,23,0.72), rgba(2,6,23,0.72)),
+        url("./ifwl_bg.webp");
+      background-size:cover;
+      background-position:center;
+      background-attachment:fixed;
+    }
+
+    header {
+      padding:14px 18px;
+      background:#111827;
+      color:#fff;
+      display:flex;
+      justify-content:space-between;
+      align-items:flex-start;
+      gap:12px;
+    }
+
+    /* Header branding (logo + welcome) */
+    .brand {
+      display:flex;
+      gap:12px;
+      align-items:flex-start;
+      min-width:0;
+    }
+    .brand img {
+      width:38px;
+      height:38px;
+      object-fit:contain;
+      margin-top:2px;
+      flex:0 0 auto;
+      filter: drop-shadow(0 1px 1px rgba(0,0,0,0.25));
+    }
+    .brandText { min-width:0; }
     header .small { font-size:12px; opacity:0.85; margin-top:4px; line-height:1.2; word-break:break-word; }
+    .welcomeLine { font-size:12px; opacity:0.95; margin-top:6px; line-height:1.25; }
+
     .wrap { display:grid; grid-template-columns: 380px 1fr; gap:14px; padding:14px; }
 
-    .card { background:#fff; border:1px solid #e5e7eb; border-radius:12px; padding:12px; }
+    .card { background:rgba(255,255,255,0.92); border:1px solid rgba(229,231,235,0.95); border-radius:12px; padding:12px; box-shadow:0 10px 28px rgba(0,0,0,0.18); }
     .title { font-weight:700; font-size:16px; margin:0 0 10px; }
     .muted { color:#6b7280; font-size:12px; }
 
@@ -18,7 +55,7 @@
     button.primary { background:#111827; color:#fff; border-color:#111827; }
     button:disabled { opacity:0.6; cursor:not-allowed; }
 
-    select, input, textarea { padding:10px; border:1px solid #d1d5db; border-radius:12px; width:100%; box-sizing:border-box; font-size:16px; }
+    select, input, textarea { padding:10px; border:1px solid #d1d5db; border-radius:12px; width:100%; box-sizing:border-box; font-size:16px; background:#fff; }
     textarea { min-height:70px; resize:vertical; }
 
     .list { display:flex; flex-direction:column; gap:8px; max-height:680px; overflow:auto; -webkit-overflow-scrolling:touch; }
@@ -29,13 +66,78 @@
     .ticket.active { border-color:#111827; box-shadow:0 0 0 2px rgba(17,24,39,0.15); }
 
     .grid2 { display:grid; grid-template-columns: 1fr 1fr; gap:10px; }
-    .sec { border:1px solid #e5e7eb; border-radius:12px; padding:12px; background:#fafafa; margin-top:10px; }
+    .sec { border:1px solid #e5e7eb; border-radius:12px; padding:12px; background:rgba(250,250,250,0.92); margin-top:10px; }
 
     .sec h3 { margin:0 0 8px; font-size:14px; }
     .badge { display:inline-block; padding:4px 10px; border-radius:999px; background:#eef2ff; border:1px solid #c7d2fe; font-size:12px; }
     .ok { color:#047857; font-weight:700; }
     .warn { color:#b45309; font-weight:700; }
     .danger { color:#b91c1c; font-weight:700; }
+
+    /* Workload UI (matches steward dashboard) */
+    .workloadBox {
+      border:1px solid #e5e7eb;
+      border-radius:12px;
+      padding:10px 12px;
+      background:rgba(250,250,250,0.92);
+      margin:10px 0 12px;
+    }
+    .workloadTop {
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
+      flex-wrap:wrap;
+    }
+    .workloadTitle {
+      font-weight:800;
+      font-size:13px;
+      margin:0;
+    }
+    .pill {
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:4px 10px;
+      border-radius:999px;
+      border:1px solid #e5e7eb;
+      background:#fff;
+      font-size:12px;
+      color:#111827;
+      white-space:nowrap;
+    }
+    .pill strong { font-weight:800; }
+    .workloadSub { margin-top:6px; font-size:12px; color:#6b7280; line-height:1.25; }
+    .needTag {
+      display:inline-block;
+      margin-top:8px;
+      padding:4px 10px;
+      border-radius:999px;
+      font-size:12px;
+      font-weight:800;
+      border:1px solid #fca5a5;
+      background:#fef2f2;
+      color:#991b1b;
+    }
+
+    /* Info banner for head steward context */
+    .infoBox{
+      border:1px solid #fde68a;
+      background:#fffbeb;
+      color:#92400e;
+      border-radius:12px;
+      padding:10px 12px;
+      margin-top:10px;
+      font-size:13px;
+      line-height:1.25;
+      font-weight:800;
+    }
+    .infoBox small{
+      display:block;
+      margin-top:6px;
+      font-weight:700;
+      opacity:0.9;
+    }
 
     .toast { position:fixed; right:16px; bottom:16px; background:#111827; color:#fff; padding:10px 12px; border-radius:12px; opacity:0; transform: translateY(8px); transition: all .18s ease; z-index:9999; }
     .toast.show { opacity:1; transform: translateY(0); }
@@ -66,6 +168,7 @@
 
     /* Mobile friendliness */
     @media (max-width: 980px) {
+      body { background-attachment:scroll; }
       header { flex-direction:column; align-items:stretch; }
       header .row { width:100%; }
       header button { width:100%; }
@@ -78,16 +181,23 @@
       #refreshTicketsBtn { width:100%; }
       #filter { font-size:16px; }
       .sec { padding:12px; }
+      .brand { align-items:center; }
+      .brand img { width:34px; height:34px; margin-top:0; }
     }
   </style>
 </head>
 
 <body>
   <header>
-    <div>
-      <div style="font-weight:800; font-size:18px;">IFWL Head Steward Dashboard</div>
-      <div class="small" id="who">Loading…</div>
+    <div class="brand">
+      <img src="./ifwl_logo.png" alt="IFWL logo">
+      <div class="brandText">
+        <div style="font-weight:800; font-size:18px;">IFWL Head Steward Dashboard</div>
+        <div class="welcomeLine" id="welcomeLine">Welcome — loading your profile…</div>
+        <div class="small" id="who">Loading…</div>
+      </div>
     </div>
+
     <div class="row">
       <button id="backBtn">Back to Classifier</button>
       <button id="logoutBtn">Sign out</button>
@@ -98,8 +208,18 @@
     <!-- LEFT -->
     <div class="card">
       <div class="row" style="justify-content:space-between;">
-        <div class="title">Tickets</div>
+        <div class="title" style="margin:0;">Live Workload</div>
         <button id="refreshTicketsBtn">Refresh</button>
+      </div>
+
+      <div class="workloadBox" aria-label="Workload summary">
+        <div class="workloadTop">
+          <div class="workloadTitle">Tickets in progress (steward team)</div>
+          <div class="pill" id="workloadPill">Loading…</div>
+        </div>
+        <div class="workloadSub" id="workloadSub">
+          As Head Steward, you oversee all live tickets. “Needs your CAUSE input” is optional, but useful for tie-breaks.
+        </div>
       </div>
 
       <div class="row" style="margin-bottom:10px;">
@@ -155,7 +275,13 @@
               <button class="primary" id="publishAllBtn">Publish ALL to Discord</button>
             </div>
           </div>
-          <div class="muted" id="statementsHint">—</div>
+
+          <div class="infoBox" aria-label="Head steward note">
+            Head Steward view: you can publish statements to Discord and oversee steward reviews.
+            <small>Submitting your own CAUSE review is optional — but can help break tied outcomes.</small>
+          </div>
+
+          <div class="muted" id="statementsHint" style="margin-top:8px;">—</div>
           <div id="statementsList" style="margin-top:8px; display:flex; flex-direction:column; gap:8px;"></div>
         </div>
 
@@ -170,8 +296,12 @@
 
         <div class="sec" id="reviewSec">
           <div class="row" style="justify-content:space-between;">
-            <h3 style="margin:0;">My CAUSE Review</h3>
+            <h3 style="margin:0;">My CAUSE Review (Optional)</h3>
             <div id="myReviewStatus" class="badge">Not submitted</div>
+          </div>
+
+          <div class="muted" style="margin-top:6px;">
+            As Head Steward, your CAUSE review is <b>optional</b>. If submitted, it may be used as a tie-breaker when steward votes are tied.
           </div>
 
           <div class="grid2" style="margin-top:10px;">
@@ -392,6 +522,11 @@
     const loadMyReviewBtn = $("loadMyReviewBtn");
     const publishAllBtn = $("publishAllBtn");
 
+    // Workload UI
+    const workloadPillEl = $("workloadPill");
+    const workloadSubEl = $("workloadSub");
+    const welcomeLineEl = $("welcomeLine");
+
     // ---------- navigation ----------
     $("backBtn").onclick = () => window.location.href = "index.html";
     $("logoutBtn").onclick = async () => { await auth.signOut(); window.location.href = "admin.html"; };
@@ -423,6 +558,10 @@
           return;
         }
 
+        const nameGuess = (currentEmail.split("@")[0] || "").replace(/[._-]+/g, " ").trim();
+        const niceName = nameGuess ? nameGuess.replace(/\b\w/g, c => c.toUpperCase()) : "Head Steward";
+        welcomeLineEl.textContent = `Welcome, ${niceName}. You oversee all live tickets — publish statements, monitor aggregate CAUSE, and guide steward outcomes.`;
+
         $("who").textContent = `Signed in as: ${currentEmail} | role: ${data.role || "headsteward"}`;
         await loadTickets();
       } catch (e) {
@@ -445,33 +584,82 @@
       return true;
     }
 
+    function isFinalised(status) {
+      const s = (status || "").trim().toLowerCase();
+      return s === "finalised";
+    }
+
+    async function doesMyReviewExist(ticketId) {
+      try {
+        const reviewId = safeKey(currentEmail);
+        if (!reviewId) return false;
+        const ref = db.collection("tickets").doc(ticketId).collection("reviews").doc(reviewId);
+        const snap = await ref.get();
+        return snap.exists;
+      } catch (e) {
+        console.warn("Review check failed for ticket:", ticketId, e);
+        return false;
+      }
+    }
+
     async function loadTickets() {
       ticketListEl.innerHTML = "";
       ticketHintEl.textContent = "Loading tickets…";
+      workloadPillEl.textContent = "Loading…";
+      workloadSubEl.textContent = "As Head Steward, you oversee all live tickets. “Needs your CAUSE input” is optional, but useful for tie-breaks.";
 
       const snap = await db.collection("tickets").limit(200).get();
       const docs = snap.docs;
 
-      let shown = 0;
-      for (const d of docs) {
+      const tickets = docs.map(d => {
         const data = d.data() || {};
         const status = (data.status || "").trim();
+        return { id: d.id, data, status };
+      });
 
-        if (!passesFilter(status)) continue;
+      const liveTickets = tickets.filter(t => !isFinalised(t.status));
+      const liveCount = liveTickets.length;
+
+      const myReviewChecks = liveTickets.map(async (t) => {
+        const hasMine = await doesMyReviewExist(t.id);
+        return { id: t.id, hasMine };
+      });
+
+      const myReviewResults = await Promise.all(myReviewChecks);
+      const myReviewMap = new Map(myReviewResults.map(x => [x.id, x.hasMine]));
+
+      const needsMyInputCount = liveTickets.filter(t => !myReviewMap.get(t.id)).length;
+
+      workloadPillEl.innerHTML = `Live: <strong>${liveCount}</strong> • Needs your input: <strong>${needsMyInputCount}</strong>`;
+
+      if (liveCount === 0) {
+        workloadSubEl.textContent = "No live tickets found. You're all caught up ✅";
+      } else if (needsMyInputCount === 0) {
+        workloadSubEl.textContent = "All live tickets in this batch already have your CAUSE review submitted ✅ (optional, but logged).";
+      } else {
+        workloadSubEl.textContent = "“Needs your CAUSE input” indicates you have not submitted a Head Steward review for this live ticket (optional).";
+      }
+
+      let shown = 0;
+      for (const t of tickets) {
+        if (!passesFilter(t.status)) continue;
+
+        const needsMyInput = (!isFinalised(t.status)) && !myReviewMap.get(t.id);
 
         const div = document.createElement("div");
-        div.className = "ticket" + (d.id === selectedTicketId ? " active" : "");
+        div.className = "ticket" + (t.id === selectedTicketId ? " active" : "");
         div.innerHTML = `
-          <div class="id">${escapeHtml(d.id)}</div>
-          <div class="status"><b>Status:</b> ${escapeHtml(status || "Under Review")}</div>
+          <div class="id">${escapeHtml(t.id)}</div>
+          <div class="status"><b>Status:</b> ${escapeHtml(t.status || "Under Review")}</div>
           <div class="muted" style="margin-top:4px;">
-            ${data.event ? `<b>Event:</b> ${escapeHtml(data.event)}` : ""}
-            ${data.accused ? ` | <b>Accused:</b> ${escapeHtml(data.accused)}` : ""}
+            ${t.data.event ? `<b>Event:</b> ${escapeHtml(t.data.event)}` : ""}
+            ${t.data.accused ? ` | <b>Accused:</b> ${escapeHtml(t.data.accused)}` : ""}
           </div>
+          ${needsMyInput ? `<div class="needTag">Needs your CAUSE input (optional)</div>` : ""}
         `;
         div.onclick = async () => {
-          selectedTicketId = d.id;
-          await selectTicket(d.id);
+          selectedTicketId = t.id;
+          await selectTicket(t.id);
           [...ticketListEl.querySelectorAll(".ticket")].forEach(x => x.classList.remove("active"));
           div.classList.add("active");
         };
@@ -479,7 +667,8 @@
         shown++;
       }
 
-      ticketHintEl.textContent = `Showing ${shown} tickets (max 200 fetched).`;
+      const filterName = filterEl.value;
+      ticketHintEl.textContent = `Showing ${shown} ticket(s) for filter: "${filterName}". Live in batch: ${liveCount} | Needs your input: ${needsMyInputCount}. (Max 200 fetched).`;
     }
 
     async function selectTicket(ticketId) {
@@ -657,7 +846,7 @@
 
       if (!resp.ok) {
         const txt = await resp.text();
-        throw new Error(`Discord publish failed: ${resp.status} ${resp.statusText} ${txt}`);
+        throw new Error(\`Discord publish failed: \${resp.status} \${resp.statusText} \${txt}\`);
       }
 
       toast("Published to Discord ✅");
